--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,68 @@
 body {
-  font-family: "Montserrat";
+  font-family: "sans-serif";
   color: Black;
-  padding: 0 10% 10%;
+  padding: 5% 10% 10%;
   text-align: center;
-  background-color: rgb(219, 217, 217);
+  /* background-color: rgb(219, 217, 217); */
+  background-color: rgb(227, 226, 222);
 }
 
-.heading input{
+.navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  padding: 0.1% 10%;
+  z-index: 1;
+}
+
+.navbarlinks {
+  text-align: right;
+}
+
+.heading input {
   border: none !important;
   border: 0;
-  -webkit-appearance: none;
-  -webkit-focus
+  background-color: white;
+  size: 40px;
+  /* -webkit-appearance: none; */
 }
 
-.user-data{
+.heading .form-inline {
+  text-align: center !important;
+  padding-left: 37%;
+}
+
+.heading button {
+  margin-left: 3px;
+}
+
+.user-data {
   margin-top: 2%;
 }
 
-.user-data .row{
+.user-data .row {
   background-color: white;
   margin: 0.5% 10%;
   padding: 1% 1%;
   border-radius: 5px;
-  font-size: 1.6rem;
+  font-size: 0.8rem;
   box-shadow: 2px 2px;
 }
 
-.user-data p{
+.user-data p {
   padding: 0;
   margin: 0;
   /* border-right: 1px solid red; */
 }
 
-.user-data .col-lg-3{
+.user-data .col-lg-3 {
   /* padding: 0;
   margin: 0; */
   border-right: 2px solid rgb(145, 141, 129);
 }
 
-.rating-graph{
+.rating-graph {
   border-radius: 5px;
   margin: 1% 0;
   padding: 1%;
@@ -47,7 +71,7 @@ body {
   box-shadow: 2px 2px;
 }
 
-.character-graph{
+.character-graph {
   /* border: 1px solid black; */
   border-radius: 5px;
   margin: 1% 10%;
@@ -57,7 +81,7 @@ body {
   box-shadow: 2px 2px;
 }
 
-.difficulty-chart{
+.difficulty-chart {
   background-color: white;
   margin: 1% 10%;
   padding: 1%;
@@ -68,28 +92,28 @@ body {
   box-shadow: 2px 2px;
 }
 
-.tag-graph{
+.tag-graph {
   padding: 1%;
   background-color: white;
   border-radius: 5px;
   box-shadow: 2px 2px;
 }
 
-.verdict-graph{
+.verdict-graph {
   background-color: white;
   padding: 1%;
   padding-bottom: 1.8%;
   border-radius: 5px;
   box-shadow: 2px 2px;
 }
-.col-lg-5{
+.col-lg-5 {
   padding-right: 1%;
 }
-.col-lg-7{
+.col-lg-7 {
   padding-left: 0;
 }
 
-.heatmap{
+.heatmap {
   background-color: white;
   padding: 3% 1%;
   padding-bottom: 1.8%;
